device creation/basic setup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,5 +18,5 @@ add_executable (${PROJECT_NAME}
         src/Log.cpp
         src/Log.h
         src/VK/VK_Renderer.cpp
-        src/VK/VK_Renderer.h src/VK/VK_Instance.cpp src/VK/VK_Instance.h src/VK/VK_ValidationLayers.cpp src/VK/VK_ValidationLayers.h)
+        src/VK/VK_Renderer.h src/VK/VK_Instance.cpp src/VK/VK_Instance.h src/VK/VK_ValidationLayers.cpp src/VK/VK_ValidationLayers.h src/VK/VK_PhysicalDevice.cpp src/VK/VK_PhysicalDevice.h src/VK/VK_Device.cpp src/VK/VK_Device.h)
 target_link_libraries(${PROJECT_NAME} glfw ${Vulkan_LIBRARY})
