--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
 project(App)
+
+set(CMAKE_CXX_STANDARD 17)
 message("Vulkan...")
 find_package(Vulkan REQUIRED)
 include_directories(${Vulkan_INCLUDE_DIRS})
@@ -18,5 +20,13 @@ add_executable (${PROJECT_NAME}
         src/Log.cpp
         src/Log.h
         src/VK/VK_Renderer.cpp
-        src/VK/VK_Renderer.h src/VK/VK_Instance.cpp src/VK/VK_Instance.h src/VK/VK_ValidationLayers.cpp src/VK/VK_ValidationLayers.h src/VK/VK_PhysicalDevice.cpp src/VK/VK_PhysicalDevice.h src/VK/VK_Device.cpp src/VK/VK_Device.h)
+        src/VK/VK_Renderer.h src/VK/VK_Instance.cpp
+        src/VK/VK_Instance.h src/VK/VK_ValidationLayers.cpp
+        src/VK/VK_ValidationLayers.h
+        src/VK/VK_PhysicalDevice.cpp
+        src/VK/VK_PhysicalDevice.h
+        src/VK/VK_Device.cpp
+        src/VK/VK_Device.h
+        src/VK/VK_Swapchain.cpp
+        src/VK/VK_Swapchain.h)
 target_link_libraries(${PROJECT_NAME} glfw ${Vulkan_LIBRARY})
