--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ project(App)
 message("Vulkan...")
 find_package(Vulkan REQUIRED)
 include_directories(${Vulkan_INCLUDE_DIRS})
+
 message("GLFW...")
 include_directories("dependencies/glfw/include")
 add_subdirectory("dependencies/glfw")
@@ -21,8 +22,10 @@ add_executable (${PROJECT_NAME}
         src/Log.cpp
         src/Log.h
         src/VK/VK_Renderer.cpp
-        src/VK/VK_Renderer.h src/VK/VK_Instance.cpp
-        src/VK/VK_Instance.h src/VK/VK_ValidationLayers.cpp
+        src/VK/VK_Renderer.h
+        src/VK/VK_Instance.cpp
+        src/VK/VK_Instance.h
+        src/VK/VK_ValidationLayers.cpp
         src/VK/VK_ValidationLayers.h
         src/VK/VK_PhysicalDevice.cpp
         src/VK/VK_PhysicalDevice.h
@@ -35,6 +38,8 @@ add_executable (${PROJECT_NAME}
         src/VK/VK_GraphicPipeline.cpp
         src/VK/VK_GraphicPipeline.h
         src/VK/VK_RenderPass.cpp
-        src/VK/VK_RenderPass.h src/VK/VK_CommandPool.cpp src/VK/VK_CommandPool.h)
+        src/VK/VK_RenderPass.h
+        src/VK/VK_CommandPool.cpp
+        src/VK/VK_CommandPool.h)
 
 target_link_libraries(${PROJECT_NAME} glfw ${Vulkan_LIBRARY})
